# Bang

./: .clang-format  .gitignore  .gitmodules  .travis.yml  Bang.vcxproj  CMakeLists.txt  README.md  SeparableBlur.frag
Assets/Icons/: .Checkerboard.png.import  .DefaultSkybox.texcm.import  .DefaultSkyboxBack.jpg.import  .DefaultSkyboxDown.jpg.import  .DefaultSkyboxFront.jpg.import  .LogoBang_B_2048.png.import  .White.png.import
Assets/Images/: .RRectBorder_9s.png.import
Assets/Materials/: .Default.bphmat.import  .DefaultAnimated.bmat.import  .DefaultTransparent.bmat.import  .Missing.bmat.import  .UIImageRenderer.bmat.import  .UITextRenderer.bmat.import  .Water.bmat.import  Default.bmat  DefaultAnimated.bmat  DefaultUnLighted.bmat  G_GizmosLightedOverlay.bmat  G_GizmosLightedScene.bmat  G_GizmosUnLightedOverlay.bmat  G_GizmosUnLightedScene.bmat  GizmosUnLightedOverlay.bmat  Missing.bmat  PP_DirectionalLight.bmat  PP_PointLight.bmat  RenderTextureToViewport.bmat  UIImageRenderer.bmat  UITextRenderer.bmat  Water.bmat
Assets/Materials/UI/: .G_UIImageRendererInv.bmat.import  G_UIImageRendererInv.bmat  G_UITextRenderer.bmat
Assets/Meshes/: .Capsule.obj.import  .Cylinder.obj.import  .UIPlane3x3.obj.import  .UIPlane3x3InvUVY.obj.import  .UIPlaneInvUVY.obj.import
Assets/Shaders/: .Common.glsl.import  .CubeMapIBLGenerator.frag.import  .CubeMapIBLGenerator.geom.import  .CubeMapIBLGenerator.vert.import  .CubeMapIrradianceGenerator.frag.import  .CubeMapIrradianceGenerator.geom.import  .CubeMapIrradianceGenerator.vert.import  .DefaultAnimated.vert.import  .DefaultFragCommon.glsl.import  .DefaultTransparent.frag.import  .DefaultTransparent.vert.import  .DefaultVertCommon.glsl.import  .DirectionalLight.glsl.import  .DirectionalLightDeferred.frag.import  .FillCubeMapFromTextures.frag.import  .FillCubeMapFromTextures.geom.import  .FillCubeMapFromTextures.vert.import  .ForwardLightCommon.glsl.import  .GizmosOutline.frag.import  .LightCommon.glsl.import  .PointLight.glsl.import  .PointLightDeferred.frag.import  .PointLightShadowMap.frag.import  .PointLightShadowMap.geom.import  .PointLightShadowMap.vert.import  .RenderSky.frag.import  .SSAOSeparableBlur.frag.import  .SSAOSeparableBlurX.frag.import  .SSAOSeparableBlurY.frag.import  .ScreenPass.frag.import  .ScreenPass.vert.import  .UI.frag.import  .UI.vert.import  .UIImageRenderer.vert.import  .UITextRenderer.vert.import  .Water.frag.import  Bloom.frag  Blur.frag  ByPassTexture.frag  Cartoon.frag  (+88 more)
Assets/Shaders/Include/: Common.glsl  DirectionalLight.glsl  G.vert  PointLight.glsl  UI.frag
Assets/Shaders/UI/: G_UIImageRenderer.vert
Assets/Textures/: .Audio.png.import  .BRDF_LUT.png.import  .Border_9s.png.import  .ButtonDown.png.import  .ButtonIdle.png.import  .Check.png.import  .Checkerboard.png.import  .Circle.png.import  .DefaultSkybox.texcm.import  .DefaultSkyboxBack.jpg.import  .DefaultSkyboxDown.jpg.import  .DefaultSkyboxFront.jpg.import  .DefaultSkyboxLeft.jpg.import  .DefaultSkyboxRight.jpg.import  .DefaultSkyboxUp.jpg.import  .DownArrow.png.import  .Error.png.import  .Info.png.import  .InnerShadow.png.import  .LightBulb.png.import  .LogoBang_2048.png.import  .LogoBang_B.svg.import  .LogoBang_B_2048.png.import  .LogoBang_B_512.png.import  .LogoBang_B_64.png.import  .OuterShadow.png.import  .RRectBorder_9s.png.import  .RRect_9s.png.import  .RightArrow.png.import  .Sun.png.import  .Warn.png.import  .White.png.import  .WhiteCM.texcm.import
CMakeIncludes/: CMakeCheckInputParams.cmake  CMakeDependencies.cmake  CMakeFlags.cmake
Compile/CMakeIncludes/: CMakeCheckInputParams.cmake  CMakeMacros.cmake
Compile/CompileDependencies/: CMakeLists.txt
Compile/CompilePackage/: CMakeLists.txt
Scripts/: coverity.sh  createClass.sh  format-code.sh  pre-commit-hook
Scripts/BuildPackage/: CMakeLists.txt  buildPackage.sh
include/Bang/: AABox.h  AARect.h  ALAudioSource.h  Alignment.h  All.h  Animation.h  Animator.h  AnimatorLayerMask.h  AnimatorStateMachine.h  AnimatorStateMachineBlendTreeNode.h  AnimatorStateMachineConnection.h  AnimatorStateMachineConnectionTransitionCondition.h  AnimatorStateMachineLayer.h  AnimatorStateMachineNode.h  AnimatorStateMachinePlayer.h  AnimatorStateMachineTransition.h  AnimatorStateMachineTransitionCondition.h  AnimatorStateMachineVariable.h  Application.h  Array.h  Array.tcc  AspectRatioMode.h  Assert.h  Asset.h  AssetHandle.h  Assets.h  Assets.tcc  AudioClip.h  AudioListener.h  AudioManager.h  AudioParams.h  AudioPlayerRunnable.h  AudioSource.h  Axis.h  AxisFunctions.h  BPReflectedStruct.h  BPReflectedVariable.h  Bang.h  BangDefines.h  BangPreprocessor.h  (+345 more)
src/Engine/: BehaviourContainer.cpp
src/Engine/Algorithms/: ImageEffects.cpp  MeshSimplifier.cpp
src/Engine/Animator/: AnimatorLayerMask.cpp  AnimatorStateMachine.cpp  AnimatorStateMachineBlendTreeNode.cpp  AnimatorStateMachineConnection.cpp  AnimatorStateMachineConnectionTransitionCondition.cpp  AnimatorStateMachineLayer.cpp  AnimatorStateMachineNode.cpp  AnimatorStateMachinePlayer.cpp  AnimatorStateMachineTransition.cpp  AnimatorStateMachineTransitionCondition.cpp  AnimatorStateMachineVariable.cpp
src/Engine/Assets/: Animation.cpp  Asset.cpp  AssetHandle.cpp  Assets.cpp  Material.cpp  Mesh.cpp  Model.cpp  PhysicsMaterial.cpp  Serializable.cpp
src/Engine/Audio/: ALAudioSource.cpp  AudioManager.cpp  AudioPlayerRunnable.cpp
src/Engine/Compiler/: CodePreprocessor.cpp  Compiler.cpp
src/Engine/Components/: Animator.cpp  AudioListener.cpp  AudioSource.cpp  Behaviour.cpp  BehaviourContainer.cpp  BoxCollider.cpp  Camera.cpp  Cloth.cpp  Collider.cpp  Component.cpp  DecalRenderer.cpp  DirectionalLight.cpp  Light.cpp  LineRenderer.cpp  MeshCollider.cpp  MeshRenderer.cpp  Particle.cpp  ParticleSystem.cpp  PointLight.cpp  PostProcessEffect.cpp  RectTransform.cpp  ReflectionProbe.cpp  Renderer.cpp  RigidBody.cpp  Rope.cpp  SkinnedMeshRenderer.cpp  SphereCollider.cpp  Timer.cpp  Transform.cpp  VolumeRenderer.cpp  WaterRenderer.cpp
src/Engine/DataStructures/: String.cpp  Variant.cpp
src/Engine/Debug/: Chrono.cpp  ChronoGL.cpp  Debug.cpp  DebugRenderer.cpp  (+3 more)
(+199 files in other folders)
